--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Red Background with Centered Logo</title>
+    <title>Cocain</title>
     <style>
         body {
             margin: 0;
@@ -15,8 +15,8 @@
             background-color: red;
         }
         .logo-container {
-            width: 100px;
-            height: 100px;
+            width: 400px;
+            height: 400px;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -30,7 +30,7 @@
 </head>
 <body>
     <div class="logo-container">
-        <img src="/placeholder.svg?height=100&width=100" alt="Company Logo" class="logo">
+        <img src="/resources/Text.png" alt="Company Logo" class="logo">
     </div>
 </body>
 </html>
