--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </head>
 <body>
     <div class="logo-container">
-        <img src="/resources/Text.png" alt="Company Logo" class="logo">
+        <img src="/resources/text-font.png" alt="Company Logo" class="logo">
     </div>
 </body>
 </html>
